@@ -66,7 +66,7 @@ The 0.4.0 release has been tested with Java 8, 11 and 17.
 
 If the JVM has been started with `-javaagent`, `MemoryMeter` will use 
 `java.lang.instrument.Instrumentation.getObjectSize` to get an estimate of the space required to store
-the given object.
+the given object. It is the safest strategies.
 
 ### Unsafe
 
@@ -88,7 +88,9 @@ imposing a memory cost of its own.
 Java 9 introduced the Java Platform Module System (JPMS) that made illegal reflective access between some modules. This is breaking
 the ability for Jamm to crawl the object graph. To avoid that problem, if Jamm detects that it cannot use reflection to retrieve
 field data it will rely on `Unsafe` to do it. Unfortunately, despite the fact that the code is designed to go around those 
-illegal accesses the JVM might emit some warning for access that only will be illegal in future versions.
+illegal accesses the JVM might emit some warning for access that only will be illegal in future versions. The `Unsafe` approach
+ might also fails for some scenarios as `Unsafe.objectFieldOffset` do not work for `records` or `hidden` classes such 
+ as lambda expressions.
 
 ## Skipping objects
 
@@ -165,6 +167,13 @@ If the `omitSharedBufferOverhead` option is used `MemoryMeter` will try to remov
 For heap buffers, if only a portion of the array is used (capacity > remaining), `MemoryMeter` will only take into account the remaining bytes
 instead of the size of the array object. For direct buffer, `MemoryMeter` will ignore the field referencing the original buffer object in its computation.
 
+## @Contended
+
+ `@Contended` was introduced in Java 8 as `sun.misc.Contended` but was repackaged in the `jdk.internal.vm.annotation` package in Java 9.
+ Therefore in Java 9+ unless `-XX:-RestrictContended` or `--add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED` are specified `MemoryMeter` will not have access
+ to the `value()` method of `@Contended` and will be unable to retrieve the contention group tags. Making it potentially unable to computes the correct sizes with the `Unsafe` or `Spec` strategies.
+ As it also means that only the internal Java classes will use that annotation, `MemoryMeter` will rely on its knowledge of those internal classes to try to go around that problem.
+
 ## Debugging
 
 In order to see the object tree visited when calling `MemoryMeter.measureDeep` and ensuring that it matches your
@@ -173,6 +182,10 @@ expectations you can build the `MemoryMeter` instance using `printVisitedTree`:
 ```
     MemoryMeter meter = MemoryMeter.builder().printVisitedTree().build();
 ```
+
+If a problem occurs while crawling the graph, `MemoryMeter` will not print the graph in the `System.out` but instead will
+print in `System.err` the stack from the object that could not be accessed up to the original input object.
+
 ## JMH Benchmarks
 
 The Jamm JMH benchmarks can be run using:
